# crazyflie-jukebox

./: .gitignore  .gitmodules  CREDITS  README.md  frequency_transformers.py  main.py  midi_converter.py  midi_utils.py  pyproject.toml  voice_strategies.py
app_jukebox/src/: Kbuild  jukebox.c
